# KeiSeiKitmav

./: .dockerignore  .gitignore  .gitmodules  BACKUP-INDEX.md  CHANGELOG.md  CLAUDE.md  DECISIONS.md  HERMES-MIGRATION-PLAN.md  LICENSE  NOTICE  PLUGIN.md  README.md  bootstrap.sh  install.sh  kei-architect.md  kei-code-implementer.md  kei-cost-guardian.md  kei-critic.md  kei-fal-ai-runner.md  kei-infra-implementer.md  kei-ml-implementer.md  kei-ml-researcher.md  kei-modal-runner.md  kei-researcher.md  kei-security-auditor.md  kei-validator.md  plugin.json  settings-snippet.json
_assembler/: Cargo.toml
_assembler/src/: assembler.rs  main.rs  manifest.rs  placeholders.rs  registry_client.rs  rule_blocks_check.rs  schemas_export.rs  substrate.rs  validator.rs  validator_tests.rs
_assembler/tests/: determinism.rs  golden.rs  mode_blocks.rs  regenerate_migrated.rs  root_fallback.rs  roundtrip.rs  rule_blocks_test.rs  substrate_role.rs  validator_negative.rs
_assembler/tests/common/: mod.rs
_assembler/tests/fixtures/_blocks/: baseline.md  evidence-grading.md  rule-error-budget.md  rule-pre-dev-gate.md
_assembler/tests/fixtures/_manifests/: architect.toml  code-implementer.toml  cost-guardian.toml  critic.toml  infra-implementer.toml  ml-implementer.toml  ml-researcher.toml  researcher.toml  security-auditor.toml  validator.toml
_assembler/tests/rule_blocks_helpers/: mod.rs
_assembler/tests/snapshots/: code-implementer.snap  cost-guardian.snap  researcher.snap
_primitives/_rust/firewall-diff/: Cargo.toml
_primitives/_rust/firewall-diff/src/: diff.rs  intent.rs  main.rs  ufw.rs
_primitives/_rust/kei-agent-runtime/: Cargo.toml
_primitives/_rust/kei-agent-runtime/src/: capability.rs  compose.rs  dna.rs  lib.rs  main.rs  prepare.rs  registry.rs  role.rs  simulated_merge.rs  spawn.rs  validate.rs  verify.rs
_primitives/_rust/kei-agent-runtime/tests/: agent_id_validator.rs  capability_trait_smoke.rs  command_verify_smoke.rs  compose_smoke.rs  dna_smoke.rs  gate_smoke.rs  pattern_gate_smoke.rs  prepare_smoke.rs  role_expression_smoke.rs  simulated_merge_smoke.rs  verify_smoke.rs
_primitives/_rust/kei-arch-derive/: Cargo.toml
_primitives/_rust/kei-arch-derive/src/: coverage.rs  emit.rs  infer.rs  lib.rs  main.rs  project.rs  serialize.rs  walker.rs
_primitives/_rust/kei-arch-derive/tests/: test_coverage.rs  test_emit.rs  test_infer.rs  test_project.rs
_primitives/_rust/kei-arch-map/: Cargo.toml
_primitives/_rust/kei-arch-map/src/: lib.rs  main.rs  plan.rs  render.rs  runner.rs  schema.rs
_primitives/_rust/kei-arch-map/tests/: evidence.rs  support.rs
_primitives/_rust/kei-artifact/: Cargo.toml
_primitives/_rust/kei-artifact/schemas/: patch.json  plan.json  research.json  review.json  spec.json
_primitives/_rust/kei-artifact/src/: artifact.rs  cli_cmds.rs  export.rs  hash.rs  lib.rs  main.rs  schema.rs  schemas.rs  store.rs  validate.rs
_primitives/_rust/kei-artifact/tests/: integration.rs  validation.rs
_primitives/_rust/kei-atom-discovery/: Cargo.toml
_primitives/_rust/kei-atom-discovery/src/: error.rs  frontmatter.rs  lib.rs  path_safety.rs  walk.rs  wikilink.rs
_primitives/_rust/kei-atom-discovery/tests/: safe_join_hardening.rs  smoke.rs  taxonomy_smoke.rs
_primitives/_rust/kei-auth/: Cargo.toml
_primitives/_rust/kei-auth-apple/: Cargo.toml
_primitives/_rust/kei-auth-apple/src/: claims.rs  client.rs  error.rs  jwt.rs  lib.rs  provider.rs
_primitives/_rust/kei-auth-apple/tests/: apple_smoke.rs
_primitives/_rust/kei-auth-google/: Cargo.toml
_primitives/_rust/kei-auth-google/src/: client.rs  error.rs  id_token.rs  lib.rs  pkce.rs  provider.rs  verify_helpers.rs
_primitives/_rust/kei-auth-google/tests/: google_client_smoke.rs  google_security_regression.rs  google_smoke.rs
_primitives/_rust/kei-auth-webauthn/: Cargo.toml
_primitives/_rust/kei-auth-webauthn/src/: builder.rs  error.rs  lib.rs  provider.rs
_primitives/_rust/kei-auth-webauthn/tests/: webauthn_smoke.rs
_primitives/_rust/kei-auth/src/: hmac.rs  lib.rs  main.rs  schema.rs  scopes.rs  tokens.rs
_primitives/_rust/kei-auth/tests/: integration.rs
_primitives/_rust/kei-brain-view/: Cargo.toml
_primitives/_rust/kei-brain-view/src/: clusters.rs  error.rs  graph.rs  lib.rs  lineage.rs  main.rs  render.rs  stats.rs  summary.rs
_primitives/_rust/kei-brain-view/tests/: clusters_integration.rs  integration.rs  legacy_schema.rs  summary_integration.rs
_primitives/_rust/kei-buddy/: Cargo.toml
_primitives/_rust/kei-buddy/src/: chat_log.rs  command_exec.rs  commands.rs  contacts.rs  contacts_sync.rs  extractor.rs  lib.rs  machine.rs  machine_helpers.rs  machine_lang.rs  machine_tests.rs  machine_tests_topic_research.rs  serve.rs  serve_runner.rs  state.rs  store_ops.rs  strings.rs  topics.rs  voice.rs
_primitives/_rust/kei-cache/: Cargo.toml
_primitives/_rust/kei-cache/src/: exec.rs  key.rs  lib.rs  main.rs  store.rs
_primitives/_rust/kei-cache/tests/: cache_smoke.rs
_primitives/_rust/kei-capability/: Cargo.toml
_primitives/_rust/kei-capability/src/: fork.rs  lib.rs  main.rs
_primitives/_rust/kei-capability/tests/: fork_smoke.rs
_primitives/_rust/kei-changelog/: Cargo.toml
_primitives/_rust/kei-changelog/src/: commit.rs  group.rs  lib.rs  main.rs  parse.rs  render.rs  walk.rs
_primitives/_rust/kei-changelog/tests/: parse.rs  render.rs
_primitives/_rust/kei-chat-store/: Cargo.toml
_primitives/_rust/kei-contacts-apple/: Cargo.toml
_primitives/_rust/kei-contacts-google/: Cargo.toml
_primitives/_rust/kei-content-store/: Cargo.toml
_primitives/_rust/kei-cortex/: Cargo.toml  INSTALL.md
_primitives/_rust/kei-cortex/src/: fal.rs  (+22 more)
_primitives/_rust/kei-crossdomain/: Cargo.toml
_primitives/_rust/kei-curator/: Cargo.toml
_primitives/_rust/kei-discover/: Cargo.toml
_primitives/_rust/kei-dna-index/: Cargo.toml
_primitives/_rust/kei-entity-store/: Cargo.toml
_primitives/_rust/kei-export-trajectories/: Cargo.toml
_primitives/_rust/kei-forge/: Cargo.toml
_primitives/_rust/kei-fork/: Cargo.toml
_primitives/_rust/kei-frustration-loop/: Cargo.toml
(+2069 files in other folders)
