[package]
name = "firewall-diff"
version = "0.1.0"
edition.workspace = true
authors = ["Denis Parfionovich <info@greendragon.info>"]
rust-version.workspace = true

[[bin]]
name = "firewall-diff"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
