[package]
name = "kei-agent-runtime"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Agent substrate v1 — Capability trait + registry + compose/spawn/verify runtime"
authors = ["Denis Parfionovich <info@greendragon.info>"]

[[bin]]
name = "kei-agent-runtime"
path = "src/main.rs"

[lib]
name = "kei_agent_runtime"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "1"
regex = "1"
once_cell = "1"
walkdir = "2"
sha2 = { workspace = true }
rand = "0.8"
kei-shared = { path = "../kei-shared" }

[dev-dependencies]
tempfile = "3"

[package.metadata.keisei]
backend = "none"
description = "Agent substrate v1 runtime: composes capability fragments, spawns gated agents, verifies on return"
authors = ["Denis Parfionovich <info@greendragon.info>"]
