[package]
name = "kei-arch-map"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Self-validating architecture map: PLAN.toml claims with mechanically-checked evidence"

[lib]
name = "kei_arch_map"
path = "src/lib.rs"

[[bin]]
name = "kei-arch-map"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
regex = { workspace = true }
url = { workspace = true }
fs2 = { workspace = true }
wait-timeout = { workspace = true }
# reqwest is workspace dep but pulls native TLS deps — use blocking sub-feature here
reqwest = { workspace = true, features = ["blocking"] }

[dev-dependencies]
tempfile = { workspace = true }
wiremock = { workspace = true }
tokio = { workspace = true }
