[package]
name = "kei-atom-discovery"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Shared atom discovery + frontmatter parsing + safe path join"
authors = ["Denis Parfionovich <info@greendragon.info>"]

[lib]
name = "kei_atom_discovery"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
walkdir = "2"
thiserror = "1"

[dev-dependencies]
tempfile = "3"

[package.metadata.keisei]
backend = "none"
description = "Shared atom discovery + frontmatter parsing + safe path join"
authors = ["Denis Parfionovich <info@greendragon.info>"]
