[package]
name = "kei-auth-google"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "AuthProvider impl for Google OAuth 2.0 + OIDC. Wave 7 atomar; sibling of kei-auth (multi-tenant tokens) and forthcoming kei-auth-{github,microsoft,apple}."
authors = ["Denis Parfionovich <info@greendragon.info>"]
license = "Apache-2.0"

[lib]
name = "kei_auth_google"
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
kei-runtime-core = { path = "../kei-runtime-core" }

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true }

[package.metadata.keisei]
backend = "google"
trait = "AuthProvider"
description = "Google OAuth 2.0 + OIDC AuthProvider"
authors = ["Denis Parfionovich <info@greendragon.info>"]
