[package]
name = "kei-auth"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Multi-tenant session tokens with scopes + HMAC-signed expiry (SQLite backend)."
authors = ["Denis Parfionovich <info@greendragon.info>"]

[[bin]]
name = "kei-auth"
path = "src/main.rs"

[lib]
name = "kei_auth"
path = "src/lib.rs"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"

[dev-dependencies]
tempfile = "3"
