[package]
name = "kei-capability"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Hook-protocol CLI adapter — routes PreToolUse check + on-return verify to kei-agent-runtime capabilities"
authors = ["Denis Parfionovich <info@greendragon.info>"]

[[bin]]
name = "kei-capability"
path = "src/main.rs"

[lib]
name = "kei_capability"
path = "src/lib.rs"

[dependencies]
kei-agent-runtime = { path = "../kei-agent-runtime" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "3"

[package.metadata.keisei]
backend = "none"
description = "Hook-protocol CLI — `kei-capability check <name>` / `kei-capability verify <name>`"
authors = ["Denis Parfionovich <info@greendragon.info>"]
