[package]
name = "kei-content-store"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Asset + prompt + campaign registry. Port of LBM internal/content."
authors = ["Denis Parfionovich <info@greendragon.info>"]

[[bin]]
name = "kei-content-store"
path = "src/main.rs"

[lib]
name = "kei_content_store"
path = "src/lib.rs"

[dependencies]
kei-entity-store = { path = "../kei-entity-store" }
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
