[package]
name = "kei-crossdomain"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Typed-edge cross-domain store. Port of LBM internal/crossdomain."
authors = ["Denis Parfionovich <info@greendragon.info>"]

[[bin]]
name = "kei-crossdomain"
path = "src/main.rs"

[lib]
name = "kei_crossdomain"
path = "src/lib.rs"

[dependencies]
kei-entity-store = { path = "../kei-entity-store" }
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
tempfile = "3"
