[package]
name = "kei-discover"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Wave 14 — federated marketplace discovery stub for KeiSei primitives (metadata-only)."
authors = ["Denis Parfionovich <info@greendragon.info>"]

[[bin]]
name = "kei-discover"
path = "src/main.rs"

[lib]
name = "kei_discover"
path = "src/lib.rs"

[dependencies]
kei-entity-store = { path = "../kei-entity-store" }
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
