[package]
name = "kei-dna-index"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Read-only adjacency/cluster/precedent index over kei-ledger DNAs"
authors = ["Denis Parfionovich <info@greendragon.info>"]

[[bin]]
name = "kei-dna-index"
path = "src/main.rs"

[lib]
name = "kei_dna_index"
path = "src/lib.rs"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
kei-shared = { path = "../kei-shared" }

[dev-dependencies]
tempfile = "3"
