[package]
name = "kei-export-trajectories"
version = "0.1.0"
edition = "2021"
description = "Export agent trajectories to ShareGPT JSONL format."
authors = ["Denis Parfionovich <info@greendragon.info>"]

# Constructor Pattern: a thin binary on top of a thin library so tests can
# drive the same code-paths the CLI does without re-implementing them.

[[bin]]
name = "kei-export-trajectories"
path = "src/main.rs"

[lib]
name = "kei_export_trajectories"
path = "src/lib.rs"

[dependencies]
# rusqlite "bundled" matches every other primitive in this workspace —
# no system-libsqlite3 surprise on macOS / Modal / Daytona.
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
# chrono only used to parse the `--from-ts` ISO-8601 string into an epoch.
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
tempfile = "3"
