[package]
name = "kei-fork"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Managed git-worktree + ledger lifecycle for agent spawns (Wave 15 foundation)"
authors = ["Denis Parfionovich <info@greendragon.info>"]

[[bin]]
name = "kei-fork"
path = "src/main.rs"

[lib]
name = "kei_fork"
path = "src/lib.rs"

[dependencies]
kei-agent-runtime = { path = "../kei-agent-runtime" }
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
tempfile = "3"
